added comment and changed title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
 <body>
    
-    <h1>Arduino Controller</h1>
+    <h1>Arduino Controller - Arduino JS lessons</h1>
 
     <h2>Sensor Reading:</h2>
     <p id="sensor"></p>
